[package]
name = "mover"
version = "0.2.0"
edition = "2021"
authors = ["Mover Contributors"]
description = "Codex local model bootstrapper for Ollama-backed flows"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
